--- a/index.html
+++ b/index.html
@@ -12,7 +12,21 @@
     <div class="container">
         <!-- header -->
         <header>
+            <a class="app-logo-link" href="">
+                <img src="./images/plane.svg" alt="plane" class="app-logo">
+            </a>
 
+            <nav class="app-nav">
+                <ul class="app-nav-ul">
+                    <li><a class="app-nav-li-link-active" href="">News</a></li>
+                    <li><a class="app-nav-li-link-notactive" href="">Services</a></li>
+                    <li><a class="app-nav-li-link-notactive" href="">Who We Are</a></li>
+                </ul>
+            </nav>
+
+            <div class="app-search-container">
+                <i class="fa-solid fa-magnifying-glass app-search-container-icon"></i>
+            </div>
         </header>
         <!-- section -->
         <section>
