--- a/index.html
+++ b/index.html
@@ -29,8 +29,36 @@
             </div>
         </header>
         <!-- section -->
-        <section>
+        <section class="app-section">
+            <h2 class="app-section-header">Company News</h2>
 
+            <div class="app-section-cards-container">
+                <div class="app-section-card">
+                    <img alt="photo" class="app-section-card-img" src="./images/image1.png">
+                    <p class="app-section-card-p">Open the article and give it a quick read. </p>
+                </div>
+                <div class="app-section-card">
+                    <img alt="photo" class="app-section-card-img" src="./images/image2.png">
+                    <p class="app-section-card-p">Open the article and give it a quick read. </p>
+                </div>
+                <div class="app-section-card">
+                    <img alt="photo" class="app-section-card-img" src="./images/image3.png">
+                    <p class="app-section-card-p">Open the article and give it a quick read. </p>
+                </div>
+                <div class="app-section-card">
+                    <img alt="photo" class="app-section-card-img" src="./images/image4.png">
+                    <p class="app-section-card-p">Open the article and give it a quick read. </p>
+                </div>
+                <div class="app-section-card">
+                    <img alt="photo" class="app-section-card-img" src="./images/image5.png">
+                    <p class="app-section-card-p">Open the article and give it a quick read. </p>
+                </div>
+                <div class="app-section-card">
+                    <img alt="photo" class="app-section-card-img" src="./images/image6.png">
+                    <p class="app-section-card-p">Open the article and give it a quick read. </p>
+                </div>
+
+            </div>
         </section>
         <!-- footer -->
         <footer>
