--- a/index.html
+++ b/index.html
@@ -62,7 +62,36 @@
         </section>
         <!-- footer -->
         <footer>
+            <div class="app-footer-social">
+                <p class="app-footer-social-text">Follow Us</p>
+                <div class="app-footer-social-icons">
+                    <a href="https://www.facebook.com/" target="_blank">
+                        <i class="fa-brands fa-facebook-f app-footer-social-icon"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/" target="_blank">
+                        <i class="fa-brands fa-linkedin-in app-footer-social-icon app-footer-social-icon-mid"></i>
+                    </a>
+                    <a href="https://www.instagram.com/" target="_blank">
+                        <i class="fa-brands fa-instagram app-footer-social-icon"></i>
+                    </a>
+                </div>
 
+            </div>
+
+            <div>
+                <a href="">
+                    <img class="app-footer-pay" alt="payment" src="./images/visa.svg">
+                </a>
+                <a href="">
+                    <img class="app-footer-pay" alt="payment" src="./images/mastercard.svg">
+                </a>
+                <a href="">
+                    <img class="app-footer-pay" alt="payment" src="./images/cash.svg">
+                </a>
+                <a href="">
+                    <img class="app-footer-pay" alt="payment" src="./images/easy.svg">
+                </a>
+            </div>
         </footer>
     </div>
     
